Создал интерфейс MainView.

--- a/Lesson 1 MVP Moxy/MVPwithMoxy/app/src/main/res/values/strings.xml
+++ b/Lesson 1 MVP Moxy/MVPwithMoxy/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">MVPwithMoxy</string>
+    <string name="textViewAdded" />
+    <string name="buttonAdd">Add text</string>
 </resources>
