--- a/Lesson 1 MVP Moxy/MVPwithMoxy/app/src/main/res/values/strings.xml
+++ b/Lesson 1 MVP Moxy/MVPwithMoxy/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">MVPwithMoxy</string>
     <string name="textViewAdded" />
     <string name="buttonAdd">Add text</string>
+    <string name="enteredText" />
 </resources>
